--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
-    "date-fns": "^4.1.0",
     "@supabase/supabase-js": "^2.42.6",
+    "date-fns": "^4.1.0",
     "next": "14.2.35",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18"
   },
   "devDependencies": {
