--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.42.6",
     "date-fns": "^4.1.0",
     "next": "14.2.35",
+    "next-auth": "^5.0.0-beta.30",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18"
